--- a/platformio.ini
+++ b/platformio.ini
@@ -19,8 +19,9 @@ board_build.mcu = esp8266
 board_build.f_cpu = 80000000L
 
 upload_protocol = esptool
-upload_port = /dev/cu.wchusbserial1430
-monitor_port = /dev/cu.wchusbserial1430
+upload_speed = 115200
+upload_port = /dev/cu.wchusbserial1410
+monitor_port = /dev/cu.wchusbserial1410
 framework = arduino
 build_flags = -Os -g0
 monitor_speed = 115200
