--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "F. Bauer",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1"
   }
